[project]
name = "llm-fecfile"
version = "0.2.0"
description = "LLM plugin for analyzing FEC campaign finance filings"
readme = "README.md"
authors = [{name = "Derek Willis"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "fecfile>=0.9.0",
    "llm>=0.26",
    "tabulate>=0.9.0",
    "requests>=2.28.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/dwillis/llm-fecfile"
Documentation = "https://github.com/dwillis/llm-fecfile#readme"
Repository = "https://github.com/dwillis/llm-fecfile.git"
"Bug Tracker" = "https://github.com/dwillis/llm-fecfile/issues"

[project.entry-points.llm]
fecfile = "llm_fecfile"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_fecfile*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
